--- a/index.html
+++ b/index.html
@@ -12,38 +12,42 @@
     <div class="quiz">
         <div class="inner-block">
             <div class="quiz-content"></div>
-            <div class="qs-number">質問1</div>
+            <div class="qs-number" id = "question-number">質問1</div>
             <h2 class="question">・・・・</h2>
             <ul class="answer">
 
                 <li>
                     <label class="qz-btn01">
-                        <input name="radio" type="radio" value="">
-                        <span class="qz-txt"></span>
+                        <span>A</span>
+                        <input name="radio" type="hidden" value="">
+                        <p class="qz-txt">選択肢01</p>
                     </label>
                 </li>
                 <li>
                     <label class="qz-btn02">
-                        <input name="radio" type="radio" value="">
-                        <span class="qz-txt"></span>
+                        <span>B</span>
+                        <input name="radio" type="hidden" value="">
+                        <p class="qz-txt">選択肢02</p>
                     </label>
                 </li>
                 <li>
                     <label class="qz-btn03">
-                        <input name="radio" type="radio" value="">
-                        <span class="qz-txt"></span>
+                        <span>C</span>
+                        <input name="radio" type="hidden" value="">
+                        <p class="qz-txt">選択肢03</p>
                     </label>
                 </li>
                 <li>
                     <label class="qz-btn04">
-                        <input name="radio" type="radio" value="">
-                        <span class="qz-txt"></span>
+                        <span>D</span>
+                        <input name="radio" type="hidden" value="">
+                        <p class="qz-txt">選択肢04</p>
                     </label>
                 </li>
             </ul>
         </div>
     </div>
-    <!-- <script src="./Quiz.js"></script> -->
+    <script src="./Quiz.js"></script>
 </body>
 
 </html>
