--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <div class="quiz">
         <div class="inner-block">
             <div class="quiz-content"></div>
-            <div class="qs-number" id = "question-number">質問1</div>
+            <div class="qs-number" id="question-number">質問1</div>
             <h2 class="question">・・・・</h2>
+            <div id="progress-container">
+                <div id="progress-bar"></div>
+            </div>
             <ul class="answer">
-
                 <li>
                     <label class="qz-btn01">
                         <span>A</span>
