--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quizgame</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div id="title-screen">
+        <h1>クイズゲーム</h1>
+        <h2></h2>
+        <button onclick="startGame()">始める</button>
+    </div>
     <div class="quiz">
         <div class="inner-block">
             <div class="quiz-content"></div>
