--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <div id="title-screen">
-        <h1>クイズゲーム</h1>
-        <h2></h2>
+        <img src="./images/Quiz-logo-03.svg" alt="ロゴ" class="logo-style">
         <button onclick="startGame()">始める</button>
     </div>
     <div class="quiz">
